Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(Number var)
    end
end
